cdi/3.0/_index.md
---
title: "Jakarta Contexts and Dependency Injection 3.0"
date: 2020-08-26
summary: "Release for Jakarta EE 9"
---

Jakarta Contexts Dependency Injection specifies a means for obtaining objects in such a way as to maximize reusability, testability and maintainability compared to traditional approaches such as constructors, factories, and service locators (e.g., JNDI).

* [Jakarta Contexts Dependency Injection 3.0 Release Record](https://projects.eclipse.org/projects/ee4j.cdi/releases/3.0)
  * [Jakarta EE Platform 9 Release Plan](https://jakartaee.github.io/platform/jakartaee9/JakartaEE9ReleasePlan)
* [Jakarta Contexts Dependency Injection 3.0 Specification Document](jakarta-cdi-spec-3.0.pdf) (PDF)
* [Jakarta Contexts Dependency Injection 3.0 Specification Document](jakarta-cdi-spec-3.0.html) (HTML)
* [Jakarta Contexts Dependency Injection 3.0 Javadoc](./apidocs)
* [Jakarta Contexts Dependency Injection 3.0 TCK](http://download.eclipse.org/jakartaee/cdi/3.0/cdi-tck-3.0.1-dist.zip)
([sig](http://download.eclipse.org/jakartaee/cdi/3.0/cdi-tck-3.0.1-dist.zip.sig),
[sha](http://download.eclipse.org/jakartaee/cdi/3.0/cdi-tck-3.0.1-dist.zip.sha256),
[pub](https://github.com/jakartaee/specification-committee/blob/master/jakartaee-spec-committee.pub))
  * For all TCK releases, see [download directory](https://download.eclipse.org/jakartaee/cdi/3.0)
* Maven coordinates
  * [jakarta.enterprise:jakarta.cdi-api:jar:3.0.0](https://central.sonatype.com/artifact/jakarta.enterprise/jakarta.enterprise.cdi-api/3.0.0/jar)

* Schemas
  * [XML Schema for the CDI 3.0 beans.xml deployment](https://jakarta.ee/xml/ns/jakartaee/beans_3_0.xsd)

# Compatible Implementations

* [Weld 4.0.0.Alpha3](https://weld.cdi-spec.org/download/)

# Ballots

## Plan Review

[//]: # (For Jakarta EE 9, the Platform Plan Review covered 95% of the Specification Projects.  For those Projects, just use the following statement in this Plan Review section:)

This Specification Project's Plan Review was covered by the [Jakarta EE 9 Plan Review](https://jakarta.ee/specifications/platform/9/).  
Please reference that ballot for the official results.

[//]: # (If your Project was required to do a standalone Plan Review...  You'll need to perform an official Plan Review ballot and record the results here.)

## Release Review

The Specification Committee Ballot concluded successfully on 2020-09-14 with the following results.

| Representative                                 | Representative for: | Vote |
|------------------------------------------------|---------------------|------|
| Kenji Kazumura                                 | Fujitsu             |  +1  |
| Dan Bandera, Kevin Sutter                      | IBM                 |  +1  |
| Ed Bratt, Dmitry Kornilov                      | Oracle              |  +1  |
| Andrew Pielage, Matt Gill                      | Payara              |  +1  |
| Scott Stark, Mark Little                       | Red Hat             |  +1  |
| David Blevins, Jean-Louis Monteiro             | Tomitribe           |  +1  |
| Ivar Grimstad                                  | EE4J PMC            |  +1  |
| Marcelo Ancelmo, Martijn Verburg               | Participant Members |  +1  |
| Werner Keil                                    | Committer Members   |  +1  |
| Scott (Congquan) Wang                          | Enterprise Members  |  +1  |
|                                                | Total               |  10  |

The ballot was run in the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg00813.html)
